--- a/assets/header.scss
+++ b/assets/header.scss
@@ -41,7 +41,7 @@
 
     &-header {
         align-items: center;
-        background: linear-gradient(180deg, rgba(0, 0, 0, .8) 0%, rgba(255, 255, 255, 0) 100%);
+        background: linear-gradient(180deg, rgba(0, 0, 0, .8) 0%, transparent);
         display: flex;
         grid-area: page-header;
         justify-content: space-between;
