--- a/assets/link.scss
+++ b/assets/link.scss
@@ -7,7 +7,7 @@
     display: inline-flex;
     outline: none;
     overflow: hidden;
-    padding: var(--spacer-1) var(--spacer-2);
+    padding: calc(var(--spacer-1) / 1.5) calc(var(--spacer-2) / 1.5);
     text-decoration: none;
     transition:
         color var(--transition-timing) var(--transition-easing),
