--- a/assets/application.scss
+++ b/assets/application.scss
@@ -212,7 +212,7 @@ small {
 }
 
 .vazio-svg {
-    margin: 10px 0 15px 0;
+    margin: var(--spacer-1) 0;
     width: calc(var(--text-6) * 5);
 
     path {
