--- a/assets/link.scss
+++ b/assets/link.scss
@@ -7,7 +7,7 @@
     display: inline-flex;
     outline: none;
     overflow: hidden;
-    padding: var(--spacer-1) var(--spacer-3);
+    padding: calc(var(--text-1) / 3) calc(var(--text-2) / 2);
     text-decoration: none;
     transition:
         color var(--transition-timing) var(--transition-easing),
