--- a/assets/page.scss
+++ b/assets/page.scss
@@ -19,6 +19,7 @@
         display: block;
         height: 100%;
         left: 0;
+        pointer-events: none;
         position: absolute;
         right: 50%;
         top: 0;
