--- a/assets/music.scss
+++ b/assets/music.scss
@@ -6,6 +6,15 @@
     grid-template-rows: 1fr;
     margin-top: var(--spacer-7);
 
+    &-photos {
+        display: grid;
+        gap: var(--spacer-7) var(--spacer-7);
+        grid-template-areas: '. .';
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        margin-top: var(--spacer-7);
+    }
+
     &-image {
         grid-column: span 4;
     }
@@ -65,6 +74,16 @@
 
         @media (min-width: 768px) {
             grid-column: span 2;
+        }
+    }
+
+    &-lyrics {
+        border-top: 1px solid var(--color-secondary);
+        grid-column: span 4;
+        padding-top: var(--spacer-7);
+
+        &-title {
+            margin-bottom: var(--spacer-7);
         }
     }
 }
