--- a/assets/listen.scss
+++ b/assets/listen.scss
@@ -4,8 +4,12 @@
     flex-wrap: wrap;
     justify-content: center;
     list-style-type: none;
-    margin: var(--spacer-7) 0 var(--spacer-3) 0;
+    margin: 0;
     padding: 0;
+
+    &.first {
+        margin-top: var(--spacer-3);
+    }
 
     li {
         margin: var(--spacer-1);
